# ltsm_project_pytorch

./: README.md  lstm_automated.ipynb  lstm_manual.ipynb  main.py  pyproject.toml
lightning_logs/version_0/checkpoints/: epoch=1999-step=4000.ckpt
lightning_logs/version_1/: events.out.tfevents.1749843204.Mac.hsd1.md.comcast.net.4541.0
lightning_logs/version_1/checkpoints/: epoch=1999-step=4000.ckpt
lightning_logs/version_2/: events.out.tfevents.1749844777.Mac.hsd1.md.comcast.net.4541.1
lightning_logs/version_2/checkpoints/: epoch=2999-step=6000.ckpt
lightning_logs/version_3/: events.out.tfevents.1749846904.Mac.hsd1.md.comcast.net.4541.2
lightning_logs/version_3/checkpoints/: epoch=4999-step=10000.ckpt
lightning_logs/version_4/: events.out.tfevents.1749848748.Mac.hsd1.md.comcast.net.5387.0
lightning_logs/version_4/checkpoints/: epoch=299-step=600.ckpt
lightning_logs/version_5/: events.out.tfevents.1749849164.Mac.hsd1.md.comcast.net.5387.1
lightning_logs/version_5/checkpoints/: epoch=299-step=600.ckpt
